Correcion del fondo, elaboracion de la primera parte

--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -1,18 +1,45 @@
 <section class="main-landing">
-    <div class="navbar">
-        <div>
-            <img src="/assets/images/w-logo.svg">
+    <div class="background">
+        <div class="navagation-bar">
+            <nav>
+                <div>
+                    <img src="/assets/images/w-logo.svg">
+                </div>
+                <div>
+                    <a class="a-link-white" routerLink="/login">Inicia sesión</a>
+                </div>
+            </nav>
         </div>
-        <div>
-            <a routerLink="/login">Inicia sesión</a>
+        <div class="left-background">
+            <div class="left-triangle"></div>
+            <div class="yellow-triangle">
+                <img src="/assets/images/yellow-triangle.svg">
+            </div>
+            <div class="blue-triangle">
+                <img src="/assets/images/blue-triangle.svg">
+            </div>
+        </div>
+        <div class="right-background">
+            <div class="right-triangle"></div>
+            <div class="black-triangle">
+                <img src="/assets/images/black-triangle.svg">
+            </div>
+            <div class="phone">
+                <img src="/assets/images/vesvir-phone.svg">
+            </div>
+        </div>
+        <div class="text-box">
+            <h3 class="fw-400 white-40">¡La mejor App para</h3>
+            <h3 class="fw-400 white-40">para encontrar ropa!</h3>
+            <p class="white-25 p-t-30">Encuentra siempre lo que estas buscando.</p>
+            <div class="p-t-20">
+                <button class="transparent-btn">
+                    <img src="/assets/images/google-play.png">
+                </button>
+            </div>
         </div>
     </div>
-    <div class="main-body">
-        <div>
-            <h2 class="m-width">¡La mejor App para encontrar ropa!</h2>
-            <p>Encuentra siempre lo que estas buscando</p>
-            <button></button>
-        </div>
-    </div>
+    <div class="">
 
+    </div>
 </section>
