Elaboracion de seccion de caracteristicas del landing

--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -39,7 +39,58 @@
             </div>
         </div>
     </div>
-    <div class="">
-
-    </div>
+    <section class="p-t-80 p-b-60">
+        <div class="max-width-page">
+            <div class="text-al-center">
+                <p class="black-25 fw-500">La única aplicación que necesitas</p>
+                <p class="blu-20 fw-500">Características</p>
+            </div>
+            <div class="p-t-30 space-around">
+                <div class="card-box">
+                    <div class="full-centered">
+                        <img src="/assets/images/smile-blu-icon.svg">
+                    </div>
+                    <div class="text-al-center p-t-20">
+                        <p class="black-18 fw-400">Fácil de usar</p>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="full-centered">
+                        <img src="/assets/images/search-blu-icon.svg">
+                    </div>
+                    <div class="text-al-center p-t-20">
+                        <p class="black-18 fw-400">Encuentra lo que necesitas</p>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="full-centered">
+                        <img src="/assets/images/hear-blu-icon.svg">
+                    </div>
+                    <div class="text-al-center p-t-20">
+                        <p class="black-18 fw-400">Guarda tus favoritos</p>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="full-centered">
+                        <img src="/assets/images/dress-blu-icon.svg">
+                    </div>
+                    <div class="text-al-center p-t-20">
+                        <p class="black-18 fw-400">Las mejores marcas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="text-al-center">
+            <p class="black-25 fw-500">¿Cómo funciona?</p>
+        </div>
+        <section class="background-1">
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste aperiam deleniti fugit, nihil nostrum, cum
+                temporibus doloribus consequuntur numquam molestiae aut illo hic sed, necessitatibus assumenda at
+                cupiditate. Dolorum, nemo.
+            </div>
+        </section>
+    </section>
 </section>
