--- a/src/app/views/landing-page/landing-page.component.css
+++ b/src/app/views/landing-page/landing-page.component.css
@@ -127,3 +127,27 @@
   border: none;
   outline: none;
 }
+
+.card-box{
+  background-color: white;
+  padding: 20px;
+  border: solid 2px #EDEBEB;
+  border-radius: 10px;
+  max-width: 200px;
+  width: 100%;
+  height: 240px;
+  transition: .3s ease-in-out;
+}
+.card-box:hover{
+  border: solid 2px #3B1283;
+
+}
+.background-1{
+  width: 100%;
+  max-height: 450px;
+  height: 100%;
+  background: url('/assets/images/left-triangles.svg');
+  background-size: contain;
+  background-position: left;
+  background-repeat: no-repeat;
+}
