--- a/src/app/views/landing-page/landing-page.component.css
+++ b/src/app/views/landing-page/landing-page.component.css
@@ -76,7 +76,7 @@
 }
 .phone {
   position: absolute;
-  top: 15%;
+  top: 10%;
   right: 35%;
   left: -225px;
 }
@@ -150,4 +150,61 @@
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
+}
+.background-2{
+  width: 100%;
+  max-height: 450px;
+  height: 100%;
+  background: url('/assets/images/middle-triangles.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.background-3{
+  width: 100%;
+  max-height: 450px;
+  height: 100%;
+  background: url('/assets/images/right-triangles.svg');
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
+}
+.background-4{
+  width: 100%;
+  max-height: 300px;
+  height: 100%;
+  background: url('/assets/images/yellow-triangles.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+footer{
+  background: black;
+  width: 100%;
+  min-height: 250px;
+  height: 100%;
+  padding: 60px 0;
+}
+.white-btn{
+  background: white;
+  color: #3b1283;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 25px;
+  font-size: 20px;
+  transition: .3s ease-in-out;
+}
+.white-btn:hover{
+  cursor: pointer;
+  background: #3b1283;
+  color: white;
+}
+.white-btn:focus{
+  outline: none;
+}
+
+.img-350{
+  max-width: 350px;
+  width: 100%;
+  height: auto;
 }
