Elaboracion de pagina de acerca de nosotros, preguntas frecuentes y terminos y condiciones

--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -154,7 +154,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="footer-box">
         <div class="max-width-page">
             <div class="row">
                 <div class="col-md-4 col-12 justify-center p-b-20">
@@ -166,7 +166,7 @@
                             <p class="white-25 fw-400">¿Eres proveedor?</p>
                         </div>
                         <div class="justify-center p-t-20">
-                            <button class="white-btn">Inicia sesión</button>
+                            <button class="white-btn" routerLink="/login">Inicia sesión</button>
                         </div>
                     </div>
                 </div>
@@ -175,13 +175,13 @@
                     <div class="box-align-c">
                         <p class="white-25 fw-400">Información</p>
                         <div class="p-t-30">
-                            <a class="a-link-white" routerLink="#">Acerca de nosotros</a>
+                            <a class="a-link-white" routerLink="/about-us">Acerca de nosotros</a>
                         </div>
                         <div class="p-t-20">
-                            <a class="a-link-white" routerLink="#">Preguntas frecuentes</a>
+                            <a class="a-link-white" routerLink="/faq">Preguntas frecuentes</a>
                         </div>
                         <div class="p-t-20">
-                            <a class="a-link-white" routerLink="#">Términos y Condiciones</a>
+                            <a class="a-link-white" routerLink="/terms-conditions">Términos y Condiciones</a>
                         </div>
                     </div>
                 </div>
